<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Blinds</string>
    <string name="button_rules">RULES</string>
    <string name="button_notify">NOTIFICATION</string>
    <string name="button_suggest">SUGGEST</string>
    <string name="button_notification">NOTIFICATION</string>
    <string name="button_addRule">ADD RULE</string>
    <string name="room">Room</string>
    <string name="info">Information</string>
    <string name="label_temp">0</string>
    <string name="label_getTime">Loading</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_update">Update Rule</string>
    <string name="title_activity_add_rule">Add Rule</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notify">Notification</string>
    <string name="title_activity_suggest">Suggest</string>

    <string-array name="temperature">
        <item>FREEZING</item>
        <item>COLD</item>
        <item>COMFORT</item>
        <item>WARM</item>
        <item>HOT</item>
    </string-array>
    <string-array name="ambience">
        <item>DARK</item>
        <item>DIM</item>
        <item>BRIGHT</item>
    </string-array>
    <string-array name="blind_position">
        <item>OPEN</item>
        <item>HALF</item>
        <item>CLOSE</item>
    </string-array>
    <string-array name="relation">
        <item></item>
        <item>AND</item>
        <item>OR</item>
    </string-array>
    <string-array name="choice">
        <item>TEMPERATURE</item>
        <item>AMBIENT</item>
    </string-array>
    <string-array name="blank">
        <item></item>
    </string-array>

    <string name="ui_label_serverURL">Server URL</string>
    <string name="ui_et_serverURL_default">10.10.10.106:8080</string>
    <string name="ui_label_requestMethod">JSON request method:</string>
    <string name="ui_et_requestMethod_default">getTime</string>
    <string name="ui_label_response_default">Server current time</string>
    <string name="ui_btn_sendRequest">Send Request</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>