<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b5b5b5"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".MyActivity" >

    <TextView
        android:id="@+id/ambience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="#00000000"
        android:paddingLeft="4pt"
        android:textColor="#ee15ab"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ambience"
        android:layout_alignEnd="@+id/ambience"
        android:layout_alignLeft="@+id/ambience"
        android:layout_alignRight="@+id/ambience"
        android:layout_alignStart="@+id/ambience"
        android:background="#00000000"
        android:gravity="center"
        android:paddingLeft="-2pt"
        android:paddingRight="-3pt"
        android:textAlignment="center"
        android:textColor="#ee15ab"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:paddingBottom="2pt"
        android:paddingLeft="-2pt"
        android:paddingTop="2pt"
        android:text="@string/info"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#7d2d98"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/room"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#7d2d98"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/notify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonRule"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#7d2d98"
        android:text="@string/button_notification"
        android:textColor="#b5b5b5"
        android:textSize="10pt"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonRule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/notify_button"
        android:layout_alignLeft="@+id/info"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:background="#7d2d98"
        android:text="@string/button_rules"
        android:textColor="#b5b5b5"
        android:textSize="10pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonRule"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:layout_alignStart="@+id/progressBar"
         android:layout_alignEnd="@+id/progressBar"
        android:gravity="center"
        android:paddingBottom="7pt"
        android:paddingTop="7pt"
        android:text="@string/label_getTime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="10pt"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:max="100"
        android:paddingBottom="5pt"
        android:paddingTop="5pt"
        android:progress="@string/label_temp"
        android:progressDrawable="@drawable/circle" />

</RelativeLayout>